--- a/Css/quiz.css
+++ b/Css/quiz.css
@@ -61,6 +61,7 @@ button {
     height: 20vh;
     margin-top: 5%;
     text-align: center;
+    z-index: 2;
 }
 
 #radio {
@@ -122,10 +123,19 @@ button {
     position: fixed;
     padding: 10px 20px;
     color: aliceblue;
-    background-color: black;
+    background-color: rgb(90, 90, 90);
     border-radius: 20px;
     top: 2%;
     right: 2%;
+    z-index: 1;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.hide {
+    visibility: hidden;
 }
 
 @media screen and (min-width: 500px) and (max-width: 768px) {
