--- a/Css/styles.css
+++ b/Css/styles.css
@@ -50,6 +50,14 @@ img {
     margin: 0 30%;
 }
 
+.pointer {
+    cursor: pointer;
+}
+
+.hide {
+    visibility: hidden;
+}
+
 @media screen and (min-width: 500px) and (max-width: 750px) {
   html {
     font-size: 20px;
