--- a/Css/quiz.css
+++ b/Css/quiz.css
@@ -133,7 +133,7 @@ button {
     color: aliceblue;
     background-color: rgb(90, 90, 90);
     border-radius: 20px;
-    top: 2%;
+    bottom: 2%;
     right: 2%;
     z-index: 1;
 }
@@ -172,6 +172,10 @@ button {
         height: 15vh;
         width: 40vw;
       }
+      #cronometro {
+        bottom: 0;
+        top: 2%;
+      }
   }
   
   @media screen and (min-width: 1366px) {
@@ -193,5 +197,9 @@ button {
         margin: 1%;
         height: 20vh;
         width: 40vw;
+      }
+      #cronometro {
+        bottom: 0;
+        top: 2%;
       }
   }
