arreglado fallo en el cronometro

--- a/Css/quiz.css
+++ b/Css/quiz.css
@@ -173,7 +173,7 @@ button {
         width: 40vw;
       }
       #cronometro {
-        bottom: 0;
+        bottom: 90%;
         top: 2%;
       }
   }
@@ -199,7 +199,7 @@ button {
         width: 40vw;
       }
       #cronometro {
-        bottom: 0;
+        bottom: 90%;
         top: 2%;
       }
   }
