--- a/Css/quiz.css
+++ b/Css/quiz.css
@@ -17,7 +17,15 @@ body {
     height: 100vh;
 }
 
-#name {
+main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#nombre {
     width: 80vw;
     height: 80vh;
     background-color: #0076b651;
@@ -31,6 +39,7 @@ body {
 
 h2 {
     font-size: 1.5rem;
+    text-align: center;
 }
 
 p, label {
@@ -68,7 +77,7 @@ button {
 #title {
     text-align: center;
     z-index: 2;
-    margin-top: 15%;
+    margin-top: 20%;
 }
 
 #radio {
