--- a/Css/score.css
+++ b/Css/score.css
@@ -59,6 +59,25 @@ td {
   visibility: hidden;
 }
 
+aside {
+  position: fixed;
+  top: 2%;
+  right: 2%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  padding: 5px 10px;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  background-color: #1a7b93;
+}
+
+
 @media screen and (min-width: 500px) and (max-width: 768px) {
     html {
       font-size: 20px;
